# embedded_portfolio

./: .gitignore  README.md
.github/workflows/: bitwise-tests.yml  firmware-build.yml  led-controller.yml  uart-led.yml
bitwise/: CMakeLists.txt  README.md
bitwise/include/: bitops.cpp  bitops.h
bitwise/src/: CMakeLists.txt  bitwise.cpp  hamming.cpp  kbit.cpp  kflip.cpp  powtwo.cpp  swap.cpp
bitwise/tests/: CMakeLists.txt  test_bitwise.cpp  test_hamming.cpp  test_hamming_bin.cpp  test_kbit.cpp  test_kflip.cpp  test_powtwo.cpp  test_swap.cpp
cgreetf/: CMakeLists.txt  README.md
cgreetf/lib/: CMakeLists.txt  greetings.c  greetings.h
cgreetf/src/: CMakeLists.txt  main.c
cgreetf/tests/: greets.txt  greets2.txt  names.txt
led_controller/: CMakeLists.txt  README.md
led_controller/src/: main.c
uart_led/: CMakeLists.txt  README.md
uart_led/src/: CMakeLists.txt  main.c
